7. src/slang.c: If auto_declare is non-zero, and a reference to an
   undefined variable is made, that variable will be automatically
   created and given static scope.
8. slsh/lib/autoload.sl: readascii added.
9. src/slrline.c: The redraw function was ignoring the application
   installed update hook, disrupting the display when a redraw was
   requested.

Changes since 2.0.7
1. src/slrline.c: SLrline_bol/eol functions were missing from the
   interface.
2. src/slarray.c: An optional reference argument may be passed to the
   where function to get the complement indices.  That is:
   
       i = where (foo, &j);
   
   is equivalent to 

       i = where (foo); 
       j = where (not foo);

3. src/slexcept.c: SLerr_throw added to allow applications to mimic
   the semantics of "throw".
4. src/slparse.c,slang.c: New short-circuit operators || and &&.  Use
   of the "orelse" and "andelse" constructs has been deprecated.
5. src/slsmg.c: SLsmg_write_wrapped_string and SLsmg_write_nstring
   were broken for double-width characters.  Updated demo/smgtest.c to
   test these functions in the presence of such characters.
6. demo/smgtest.sl: Embedded some control characters in the
   double-wide character string for testing the handling of them.
7. doc/tm/cslang.tm: Updated some of the documentation for the SLsmg
   interface.
8. src/slstd.c,slang.c: Added new function intrinisc called "_$" that
   expands embedded "dollar-escaped" variables.
9. src/sllist.c: Added __push_list/__pop_list functions that push list
   elements to the stack or create a list from objects on the stack.
   These functions may also be used as an alternative to
   __push_args/__pop_args.
10. slsh/lib/structfuns.sl: Modified struct_combine to use __pop_list
    instead of __push_list.
11. src/test/scircuit.sl used for regression testing of the
    short-circuit operators was missing.
12. src/slang.c: Small memory leak involving method calls plugged.