@@ -17,6 +17,8 @@ Changes since 2.1.0
 9. src/slrline.c: The redraw function was ignoring the application
    installed update hook, disrupting the display when a redraw was
    requested.
+10. autoconf/configure.ac: -liconv was not getting added when creating
+    the iconv module on systems with a standalone iconv library.
 
 Changes since 2.0.7
 1. src/slrline.c: SLrline_bol/eol functions were missing from the
